force-app/main/default/objects/Activity/fields/Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>Case_Stage__c</fullName>
    <label>Case Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>