force-app/main/default/objects/Activity/fields/Manual_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Manual_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Tasks</label>
    <type>Checkbox</type>
</CustomField>