force-app/main/default/objects/Activity/fields/Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason__c</fullName>
    <label>Rejected Reason</label>
    <type>TextArea</type>
</CustomField>