force-app/main/default/objects/Activity/fields/Stage_Matched__c.field-meta.xml
<CustomField>
    <fullName>Stage_Matched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage Matched?</label>
    <type>Checkbox</type>
</CustomField>