force-app/main/default/objects/Activity/fields/Track_ID__c.field-meta.xml
<CustomField>
    <fullName>Track_ID__c</fullName>
    <label>Track ID</label>
    <type>TextArea</type>
</CustomField>