force-app/main/default/objects/Activity/fields/Work_Item_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_External_ID__c</fullName>
    <label>Work Item External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>